parser.output
Terminales no usados en la gramática

    literalTK
    comentarioTK


Estado 89 conflictos: 1 desplazamiento/reducción
Estado 128 conflictos: 1 reducción/reducción
Estado 179 conflictos: 1 reducción/reducción


Gramática

    0 $accept: desc_algoritmo $end

    1 desc_algoritmo: algoritmoTK identificadorTK puntoYComaTK cabecera_alg bloque_alg finAlgoritmoTK puntoTK

    2 cabecera_alg: decl_globales decl_a_f decl_ent_sal precondicionTK

    3 bloque_alg: bloque postCondicionTK

    4 decl_globales: declaracion_tipo decl_globales
    5              | declaracion_const decl_globales
    6              | ε

    7 decl_a_f: accion_d decl_a_f
    8         | funcion_d decl_a_f
    9         | ε

   10 bloque: declaraciones instrucciones

   11 declaraciones: declaracion_tipo declaraciones
   12              | declaracion_const declaraciones
   13              | declaracion_var declaraciones
   14              | ε

   15 declaracion_tipo: tipoTK lista_d_tipo finTipoTK puntoYComaTK

   16 declaracion_const: constTK lista_d_cte finConstTK puntoYComaTK

   17 declaracion_var: varTK lista_d_var finVarTK puntoYComaTK

   18 lista_d_tipo: identificadorTK signoIgualTK d_tipo puntoYComaTK lista_d_tipo
   19             | ε

   20 d_tipo: tuplaTK lista_campos finTuplaTK
   21       | tablaTK inicioArrayTK expresion_t subrangoTK expresion_t finalArrayTK deTK d_tipo
   22       | identificadorTK
   23       | expresion_t subrangoTK expresion_t
   24       | refTK d_tipo
   25       | enteroTK
   26       | booleanoTK
   27       | realTK
   28       | cadenaTK
   29       | caracterTK

   30 expresion_t: expresion
   31            | literalCaracterTK

   32 lista_campos: identificadorTK definicionTipoVariableTK d_tipo puntoYComaTK lista_campos
   33             | ε

   34 lista_d_cte: nombreConstanteTK signoIgualTK literalCaracterTK puntoYComaTK lista_d_cte
   35            | nombreConstanteTK signoIgualTK literalCadenaTK puntoYComaTK lista_d_cte
   36            | nombreConstanteTK signoIgualTK literalEnteroTK puntoYComaTK lista_d_cte
   37            | nombreConstanteTK signoIgualTK literalRealTK puntoYComaTK lista_d_cte
   38            | nombreConstanteTK signoIgualTK literalBooleanoTK puntoYComaTK lista_d_cte
   39            | ε

   40 lista_d_var: lista_id definicionTipoVariableTK d_tipo puntoYComaTK lista_d_var
   41            | ε

   42 lista_id: identificadorTK separadorTK lista_id
   43         | identificadorTK

   44 decl_ent_sal: decl_ent
   45             | decl_ent decl_sal
   46             | decl_sal

   47 decl_ent: entradaTK lista_d_var

   48 decl_sal: salidaTK lista_d_var

   49 expresion: exp_a
   50          | exp_b
   51          | funcion_ll

   52 exp_a: exp_a operadoresSumaORestaTK exp_a
   53      | exp_a operadoresMultiplicacionODivisionTK exp_a
   54      | parentesisAperturaTK exp_a parentesisCierreTK
   55      | operando
   56      | literalRealTK
   57      | literalEnteroTK
   58      | operadoresSumaORestaTK exp_a

   59 exp_b: exp_b operadoresBooleanosTK exp_b
   60      | noTK exp_b
   61      | operando_b
   62      | literalBooleanoTK
   63      | expresion operadoresComparacionTK expresion
   64      | parentesisAperturaTK exp_b parentesisCierreTK

   65 operando: identificadorTK
   66         | operando puntoTK operando
   67         | operando inicioArrayTK expresion finalArrayTK
   68         | operando refTK

   69 operando_b: identificadorBooleanoTK

   70 instrucciones: instruccion puntoYComaTK instrucciones
   71              | instruccion

   72 instruccion: continuarTK
   73            | asignacion
   74            | alternativa
   75            | iteracion
   76            | accion_ll

   77 asignacion: operando igualAsignacionTK expresion
   78           | operando_b igualAsignacionTK exp_b

   79 alternativa: siTK expresion entoncesTK instrucciones lista_opciones finSiTK

   80 lista_opciones: siNoSiTK expresion entoncesTK instrucciones lista_opciones
   81               | ε

   82 iteracion: it_cota_fija
   83          | it_cota_exp

   84 it_cota_exp: mientrasTK expresion hacerTK instrucciones finMientrasTK

   85 it_cota_fija: paraTK identificadorTK igualAsignacionTK expresion hastaTK expresion hacerTK instrucciones finParaTK

   86 accion_d: accionTK a_cabecera bloque finAccionTK

   87 funcion_d: funcionTK f_cabecera bloque devuelveTK expresion finFuncionTK

   88 a_cabecera: identificadorTK parentesisAperturaTK d_par_form parentesisCierreTK puntoYComaTK

   89 f_cabecera: identificadorTK parentesisAperturaTK lista_d_var parentesisCierreTK devuelveTK d_tipo puntoYComaTK

   90 d_par_form: d_p_form puntoYComaTK d_par_form
   91           | ε

   92 d_p_form: entradaTK lista_id definicionTipoVariableTK d_tipo
   93         | salidaTK lista_id definicionTipoVariableTK d_tipo
   94         | entradaSalidaTK lista_id definicionTipoVariableTK d_tipo

   95 accion_ll: identificadorTK parentesisAperturaTK l_ll parentesisCierreTK

   96 funcion_ll: identificadorTK parentesisAperturaTK l_ll parentesisCierreTK

   97 l_ll: expresion separadorTK l_ll
   98     | expresion


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    cadenaTK (258) 28
    caracterTK (259) 29
    booleanoTK (260) 26
    realTK (261) 27
    enteroTK (262) 25
    accionTK (263) 86
    algoritmoTK (264) 1
    funcionTK (265) 87
    tipoTK (266) 15
    varTK (267) 17
    tuplaTK (268) 20
    constTK (269) 16
    refTK (270) 24 68
    tablaTK (271) 21
    deTK (272) 21
    finAccionTK (273) 86
    finAlgoritmoTK (274) 1
    finFuncionTK (275) 87
    finTipoTK (276) 15
    finVarTK (277) 17
    finTuplaTK (278) 20
    finConstTK (279) 16
    mientrasTK (280) 84
    siTK (281) 79
    paraTK (282) 85
    hacerTK (283) 84 85
    hastaTK (284) 85
    continuarTK (285) 72
    finMientrasTK (286) 84
    finSiTK (287) 79
    finParaTK (288) 85
    entradaTK (289) 47 92
    entradaSalidaTK (290) 94
    salidaTK (291) 48 93
    devuelveTK (292) 87 89
    operadoresMultiplicacionODivisionTK <operador> (293) 53
    noTK (294) 60
    operadoresBooleanosTK <operador> (295) 59
    operadoresSumaORestaTK <operador> (296) 52 58
    parentesisAperturaTK (297) 54 64 88 89 95 96
    parentesisCierreTK (298) 54 64 88 89 95 96
    operadoresComparacionTK <operador> (299) 63
    signoIgualTK (300) 18 34 35 36 37 38
    igualAsignacionTK (301) 77 78 85
    puntoYComaTK (302) 1 15 16 17 18 32 34 35 36 37 38 40 70 88 89 90
    separadorTK (303) 42 97
    subrangoTK (304) 21 23
    definicionTipoVariableTK (305) 32 40 92 93 94
    entoncesTK (306) 79 80
    siNoSiTK (307) 80
    literalTK (308)
    inicioArrayTK (309) 21 67
    finalArrayTK (310) 21 67
    literalBooleanoTK <valor> (311) 38 62
    literalCadenaTK <cadena> (312) 35
    identificadorTK <cadena> (313) 1 18 22 32 42 43 65 85 88 89 95 96
    literalCaracterTK <caracter> (314) 31 34
    literalEnteroTK <entero> (315) 36 57
    precondicionTK <precondicon> (316) 2
    postCondicionTK <postcondicion> (317) 3
    comentarioTK (318)
    literalRealTK <real> (319) 37 56
    nombreConstanteTK <constante> (320) 34 35 36 37 38
    identificadorBooleanoTK <cadena> (321) 69
    puntoTK (322) 1 66
    UPLUSMINUS (323)


No terminales con las reglas donde aparecen

    $accept (69)
        on left: 0
    desc_algoritmo (70)
        on left: 1
        on right: 0
    cabecera_alg (71)
        on left: 2
        on right: 1
    bloque_alg (72)
        on left: 3
        on right: 1
    decl_globales (73)
        on left: 4 5 6
        on right: 2 4 5
    decl_a_f (74)
        on left: 7 8 9
        on right: 2 7 8
    bloque (75)
        on left: 10
        on right: 3 86 87
    declaraciones (76)
        on left: 11 12 13 14
        on right: 10 11 12 13
    declaracion_tipo (77)
        on left: 15
        on right: 4 11
    declaracion_const (78)
        on left: 16
        on right: 5 12
    declaracion_var (79)
        on left: 17
        on right: 13
    lista_d_tipo (80)
        on left: 18 19
        on right: 15 18
    d_tipo <tipo> (81)
        on left: 20 21 22 23 24 25 26 27 28 29
        on right: 18 21 24 32 40 89 92 93 94
    expresion_t (82)
        on left: 30 31
        on right: 21 23
    lista_campos (83)
        on left: 32 33
        on right: 20 32
    lista_d_cte <entero> (84)
        on left: 34 35 36 37 38 39
        on right: 16 34 35 36 37 38
    lista_d_var (85)
        on left: 40 41
        on right: 17 40 47 48 89
    lista_id <paraListaId> (86)
        on left: 42 43
        on right: 40 42 92 93 94
    decl_ent_sal (87)
        on left: 44 45 46
        on right: 2
    decl_ent (88)
        on left: 47
        on right: 44 45
    decl_sal (89)
        on left: 48
        on right: 45 46
    expresion <paraOperando> (90)
        on left: 49 50 51
        on right: 30 63 67 77 79 80 84 85 87 97 98
    exp_a <paraOperando> (91)
        on left: 52 53 54 55 56 57 58
        on right: 49 52 53 54 58
    exp_b (92)
        on left: 59 60 61 62 63 64
        on right: 50 59 60 64 78
    operando <paraOperando> (93)
        on left: 65 66 67 68
        on right: 55 66 67 68 77
    operando_b (94)
        on left: 69
        on right: 61 78
    instrucciones (95)
        on left: 70 71
        on right: 10 70 79 80 84 85
    instruccion (96)
        on left: 72 73 74 75 76
        on right: 70 71
    asignacion (97)
        on left: 77 78
        on right: 73
    alternativa (98)
        on left: 79
        on right: 74
    lista_opciones (99)
        on left: 80 81
        on right: 79 80
    iteracion (100)
        on left: 82 83
        on right: 75
    it_cota_exp (101)
        on left: 84
        on right: 83
    it_cota_fija (102)
        on left: 85
        on right: 82
    accion_d (103)
        on left: 86
        on right: 7
    funcion_d (104)
        on left: 87
        on right: 8
    a_cabecera (105)
        on left: 88
        on right: 86
    f_cabecera (106)
        on left: 89
        on right: 87
    d_par_form (107)
        on left: 90 91
        on right: 88 90
    d_p_form (108)
        on left: 92 93 94
        on right: 90
    accion_ll (109)
        on left: 95
        on right: 76
    funcion_ll (110)
        on left: 96
        on right: 51
    l_ll (111)
        on left: 97 98
        on right: 95 96 97


Estado 0

    0 $accept: • desc_algoritmo $end

    algoritmoTK  desplazar e ir al estado 1

    desc_algoritmo  ir al estado 2


Estado 1

    1 desc_algoritmo: algoritmoTK • identificadorTK puntoYComaTK cabecera_alg bloque_alg finAlgoritmoTK puntoTK

    identificadorTK  desplazar e ir al estado 3


Estado 2

    0 $accept: desc_algoritmo • $end

    $end  desplazar e ir al estado 4


Estado 3

    1 desc_algoritmo: algoritmoTK identificadorTK • puntoYComaTK cabecera_alg bloque_alg finAlgoritmoTK puntoTK

    puntoYComaTK  desplazar e ir al estado 5


Estado 4

    0 $accept: desc_algoritmo $end •

    $default  aceptar


Estado 5

    1 desc_algoritmo: algoritmoTK identificadorTK puntoYComaTK • cabecera_alg bloque_alg finAlgoritmoTK puntoTK

    tipoTK   desplazar e ir al estado 6
    constTK  desplazar e ir al estado 7

    $default  reduce usando la regla 6 (decl_globales)

    cabecera_alg       ir al estado 8
    decl_globales      ir al estado 9
    declaracion_tipo   ir al estado 10
    declaracion_const  ir al estado 11


Estado 6

   15 declaracion_tipo: tipoTK • lista_d_tipo finTipoTK puntoYComaTK

    identificadorTK  desplazar e ir al estado 12

    $default  reduce usando la regla 19 (lista_d_tipo)

    lista_d_tipo  ir al estado 13


Estado 7

   16 declaracion_const: constTK • lista_d_cte finConstTK puntoYComaTK

    nombreConstanteTK  desplazar e ir al estado 14

    $default  reduce usando la regla 39 (lista_d_cte)

    lista_d_cte  ir al estado 15


Estado 8

    1 desc_algoritmo: algoritmoTK identificadorTK puntoYComaTK cabecera_alg • bloque_alg finAlgoritmoTK puntoTK

    tipoTK   desplazar e ir al estado 6
    varTK    desplazar e ir al estado 16
    constTK  desplazar e ir al estado 7

    $default  reduce usando la regla 14 (declaraciones)

    bloque_alg         ir al estado 17
    bloque             ir al estado 18
    declaraciones      ir al estado 19
    declaracion_tipo   ir al estado 20
    declaracion_const  ir al estado 21
    declaracion_var    ir al estado 22


Estado 9

    2 cabecera_alg: decl_globales • decl_a_f decl_ent_sal precondicionTK

    accionTK   desplazar e ir al estado 23
    funcionTK  desplazar e ir al estado 24

    $default  reduce usando la regla 9 (decl_a_f)

    decl_a_f   ir al estado 25
    accion_d   ir al estado 26
    funcion_d  ir al estado 27


Estado 10

    4 decl_globales: declaracion_tipo • decl_globales

    tipoTK   desplazar e ir al estado 6
    constTK  desplazar e ir al estado 7

    $default  reduce usando la regla 6 (decl_globales)

    decl_globales      ir al estado 28
    declaracion_tipo   ir al estado 10
    declaracion_const  ir al estado 11


Estado 11

    5 decl_globales: declaracion_const • decl_globales

    tipoTK   desplazar e ir al estado 6
    constTK  desplazar e ir al estado 7

    $default  reduce usando la regla 6 (decl_globales)

    decl_globales      ir al estado 29
    declaracion_tipo   ir al estado 10
    declaracion_const  ir al estado 11


Estado 12

   18 lista_d_tipo: identificadorTK • signoIgualTK d_tipo puntoYComaTK lista_d_tipo

    signoIgualTK  desplazar e ir al estado 30


Estado 13

   15 declaracion_tipo: tipoTK lista_d_tipo • finTipoTK puntoYComaTK

    finTipoTK  desplazar e ir al estado 31


Estado 14

   34 lista_d_cte: nombreConstanteTK • signoIgualTK literalCaracterTK puntoYComaTK lista_d_cte
   35            | nombreConstanteTK • signoIgualTK literalCadenaTK puntoYComaTK lista_d_cte
   36            | nombreConstanteTK • signoIgualTK literalEnteroTK puntoYComaTK lista_d_cte
   37            | nombreConstanteTK • signoIgualTK literalRealTK puntoYComaTK lista_d_cte
   38            | nombreConstanteTK • signoIgualTK literalBooleanoTK puntoYComaTK lista_d_cte

    signoIgualTK  desplazar e ir al estado 32


Estado 15

   16 declaracion_const: constTK lista_d_cte • finConstTK puntoYComaTK

    finConstTK  desplazar e ir al estado 33


Estado 16

   17 declaracion_var: varTK • lista_d_var finVarTK puntoYComaTK

    identificadorTK  desplazar e ir al estado 34

    $default  reduce usando la regla 41 (lista_d_var)

    lista_d_var  ir al estado 35
    lista_id     ir al estado 36


Estado 17

    1 desc_algoritmo: algoritmoTK identificadorTK puntoYComaTK cabecera_alg bloque_alg • finAlgoritmoTK puntoTK

    finAlgoritmoTK  desplazar e ir al estado 37


Estado 18

    3 bloque_alg: bloque • postCondicionTK

    postCondicionTK  desplazar e ir al estado 38


Estado 19

   10 bloque: declaraciones • instrucciones

    mientrasTK               desplazar e ir al estado 39
    siTK                     desplazar e ir al estado 40
    paraTK                   desplazar e ir al estado 41
    continuarTK              desplazar e ir al estado 42
    identificadorTK          desplazar e ir al estado 43
    identificadorBooleanoTK  desplazar e ir al estado 44

    operando       ir al estado 45
    operando_b     ir al estado 46
    instrucciones  ir al estado 47
    instruccion    ir al estado 48
    asignacion     ir al estado 49
    alternativa    ir al estado 50
    iteracion      ir al estado 51
    it_cota_exp    ir al estado 52
    it_cota_fija   ir al estado 53
    accion_ll      ir al estado 54


Estado 20

   11 declaraciones: declaracion_tipo • declaraciones

    tipoTK   desplazar e ir al estado 6
    varTK    desplazar e ir al estado 16
    constTK  desplazar e ir al estado 7

    $default  reduce usando la regla 14 (declaraciones)

    declaraciones      ir al estado 55
    declaracion_tipo   ir al estado 20
    declaracion_const  ir al estado 21
    declaracion_var    ir al estado 22


Estado 21

   12 declaraciones: declaracion_const • declaraciones

    tipoTK   desplazar e ir al estado 6
    varTK    desplazar e ir al estado 16
    constTK  desplazar e ir al estado 7

    $default  reduce usando la regla 14 (declaraciones)

    declaraciones      ir al estado 56
    declaracion_tipo   ir al estado 20
    declaracion_const  ir al estado 21
    declaracion_var    ir al estado 22


Estado 22

   13 declaraciones: declaracion_var • declaraciones

    tipoTK   desplazar e ir al estado 6
    varTK    desplazar e ir al estado 16
    constTK  desplazar e ir al estado 7

    $default  reduce usando la regla 14 (declaraciones)

    declaraciones      ir al estado 57
    declaracion_tipo   ir al estado 20
    declaracion_const  ir al estado 21
    declaracion_var    ir al estado 22


Estado 23

   86 accion_d: accionTK • a_cabecera bloque finAccionTK

    identificadorTK  desplazar e ir al estado 58

    a_cabecera  ir al estado 59


Estado 24

   87 funcion_d: funcionTK • f_cabecera bloque devuelveTK expresion finFuncionTK

    identificadorTK  desplazar e ir al estado 60

    f_cabecera  ir al estado 61


Estado 25

    2 cabecera_alg: decl_globales decl_a_f • decl_ent_sal precondicionTK

    entradaTK  desplazar e ir al estado 62
    salidaTK   desplazar e ir al estado 63

    decl_ent_sal  ir al estado 64
    decl_ent      ir al estado 65
    decl_sal      ir al estado 66


Estado 26

    7 decl_a_f: accion_d • decl_a_f

    accionTK   desplazar e ir al estado 23
    funcionTK  desplazar e ir al estado 24

    $default  reduce usando la regla 9 (decl_a_f)

    decl_a_f   ir al estado 67
    accion_d   ir al estado 26
    funcion_d  ir al estado 27


Estado 27

    8 decl_a_f: funcion_d • decl_a_f

    accionTK   desplazar e ir al estado 23
    funcionTK  desplazar e ir al estado 24

    $default  reduce usando la regla 9 (decl_a_f)

    decl_a_f   ir al estado 68
    accion_d   ir al estado 26
    funcion_d  ir al estado 27


Estado 28

    4 decl_globales: declaracion_tipo decl_globales •

    $default  reduce usando la regla 4 (decl_globales)


Estado 29

    5 decl_globales: declaracion_const decl_globales •

    $default  reduce usando la regla 5 (decl_globales)


Estado 30

   18 lista_d_tipo: identificadorTK signoIgualTK • d_tipo puntoYComaTK lista_d_tipo

    cadenaTK                 desplazar e ir al estado 69
    caracterTK               desplazar e ir al estado 70
    booleanoTK               desplazar e ir al estado 71
    realTK                   desplazar e ir al estado 72
    enteroTK                 desplazar e ir al estado 73
    tuplaTK                  desplazar e ir al estado 74
    refTK                    desplazar e ir al estado 75
    tablaTK                  desplazar e ir al estado 76
    noTK                     desplazar e ir al estado 77
    operadoresSumaORestaTK   desplazar e ir al estado 78
    parentesisAperturaTK     desplazar e ir al estado 79
    literalBooleanoTK        desplazar e ir al estado 80
    identificadorTK          desplazar e ir al estado 81
    literalCaracterTK        desplazar e ir al estado 82
    literalEnteroTK          desplazar e ir al estado 83
    literalRealTK            desplazar e ir al estado 84
    identificadorBooleanoTK  desplazar e ir al estado 44

    d_tipo       ir al estado 85
    expresion_t  ir al estado 86
    expresion    ir al estado 87
    exp_a        ir al estado 88
    exp_b        ir al estado 89
    operando     ir al estado 90
    operando_b   ir al estado 91
    funcion_ll   ir al estado 92


Estado 31

   15 declaracion_tipo: tipoTK lista_d_tipo finTipoTK • puntoYComaTK

    puntoYComaTK  desplazar e ir al estado 93


Estado 32

   34 lista_d_cte: nombreConstanteTK signoIgualTK • literalCaracterTK puntoYComaTK lista_d_cte
   35            | nombreConstanteTK signoIgualTK • literalCadenaTK puntoYComaTK lista_d_cte
   36            | nombreConstanteTK signoIgualTK • literalEnteroTK puntoYComaTK lista_d_cte
   37            | nombreConstanteTK signoIgualTK • literalRealTK puntoYComaTK lista_d_cte
   38            | nombreConstanteTK signoIgualTK • literalBooleanoTK puntoYComaTK lista_d_cte

    literalBooleanoTK  desplazar e ir al estado 94
    literalCadenaTK    desplazar e ir al estado 95
    literalCaracterTK  desplazar e ir al estado 96
    literalEnteroTK    desplazar e ir al estado 97
    literalRealTK      desplazar e ir al estado 98


Estado 33

   16 declaracion_const: constTK lista_d_cte finConstTK • puntoYComaTK

    puntoYComaTK  desplazar e ir al estado 99


Estado 34

   42 lista_id: identificadorTK • separadorTK lista_id
   43         | identificadorTK •

    separadorTK  desplazar e ir al estado 100

    $default  reduce usando la regla 43 (lista_id)


Estado 35

   17 declaracion_var: varTK lista_d_var • finVarTK puntoYComaTK

    finVarTK  desplazar e ir al estado 101


Estado 36

   40 lista_d_var: lista_id • definicionTipoVariableTK d_tipo puntoYComaTK lista_d_var

    definicionTipoVariableTK  desplazar e ir al estado 102


Estado 37

    1 desc_algoritmo: algoritmoTK identificadorTK puntoYComaTK cabecera_alg bloque_alg finAlgoritmoTK • puntoTK

    puntoTK  desplazar e ir al estado 103


Estado 38

    3 bloque_alg: bloque postCondicionTK •

    $default  reduce usando la regla 3 (bloque_alg)


Estado 39

   84 it_cota_exp: mientrasTK • expresion hacerTK instrucciones finMientrasTK

    noTK                     desplazar e ir al estado 77
    operadoresSumaORestaTK   desplazar e ir al estado 78
    parentesisAperturaTK     desplazar e ir al estado 79
    literalBooleanoTK        desplazar e ir al estado 80
    identificadorTK          desplazar e ir al estado 104
    literalEnteroTK          desplazar e ir al estado 83
    literalRealTK            desplazar e ir al estado 84
    identificadorBooleanoTK  desplazar e ir al estado 44

    expresion   ir al estado 105
    exp_a       ir al estado 88
    exp_b       ir al estado 89
    operando    ir al estado 90
    operando_b  ir al estado 91
    funcion_ll  ir al estado 92


Estado 40

   79 alternativa: siTK • expresion entoncesTK instrucciones lista_opciones finSiTK

    noTK                     desplazar e ir al estado 77
    operadoresSumaORestaTK   desplazar e ir al estado 78
    parentesisAperturaTK     desplazar e ir al estado 79
    literalBooleanoTK        desplazar e ir al estado 80
    identificadorTK          desplazar e ir al estado 104
    literalEnteroTK          desplazar e ir al estado 83
    literalRealTK            desplazar e ir al estado 84
    identificadorBooleanoTK  desplazar e ir al estado 44

    expresion   ir al estado 106
    exp_a       ir al estado 88
    exp_b       ir al estado 89
    operando    ir al estado 90
    operando_b  ir al estado 91
    funcion_ll  ir al estado 92


Estado 41

   85 it_cota_fija: paraTK • identificadorTK igualAsignacionTK expresion hastaTK expresion hacerTK instrucciones finParaTK

    identificadorTK  desplazar e ir al estado 107


Estado 42

   72 instruccion: continuarTK •

    $default  reduce usando la regla 72 (instruccion)


Estado 43

   65 operando: identificadorTK •
   95 accion_ll: identificadorTK • parentesisAperturaTK l_ll parentesisCierreTK

    parentesisAperturaTK  desplazar e ir al estado 108

    $default  reduce usando la regla 65 (operando)


Estado 44

   69 operando_b: identificadorBooleanoTK •

    $default  reduce usando la regla 69 (operando_b)


Estado 45

   66 operando: operando • puntoTK operando
   67         | operando • inicioArrayTK expresion finalArrayTK
   68         | operando • refTK
   77 asignacion: operando • igualAsignacionTK expresion

    refTK              desplazar e ir al estado 109
    igualAsignacionTK  desplazar e ir al estado 110
    inicioArrayTK      desplazar e ir al estado 111
    puntoTK            desplazar e ir al estado 112


Estado 46

   78 asignacion: operando_b • igualAsignacionTK exp_b

    igualAsignacionTK  desplazar e ir al estado 113


Estado 47

   10 bloque: declaraciones instrucciones •

    $default  reduce usando la regla 10 (bloque)


Estado 48

   70 instrucciones: instruccion • puntoYComaTK instrucciones
   71              | instruccion •

    puntoYComaTK  desplazar e ir al estado 114

    $default  reduce usando la regla 71 (instrucciones)


Estado 49

   73 instruccion: asignacion •

    $default  reduce usando la regla 73 (instruccion)


Estado 50

   74 instruccion: alternativa •

    $default  reduce usando la regla 74 (instruccion)


Estado 51

   75 instruccion: iteracion •

    $default  reduce usando la regla 75 (instruccion)


Estado 52

   83 iteracion: it_cota_exp •

    $default  reduce usando la regla 83 (iteracion)


Estado 53

   82 iteracion: it_cota_fija •

    $default  reduce usando la regla 82 (iteracion)


Estado 54

   76 instruccion: accion_ll •

    $default  reduce usando la regla 76 (instruccion)


Estado 55

   11 declaraciones: declaracion_tipo declaraciones •

    $default  reduce usando la regla 11 (declaraciones)


Estado 56

   12 declaraciones: declaracion_const declaraciones •

    $default  reduce usando la regla 12 (declaraciones)


Estado 57

   13 declaraciones: declaracion_var declaraciones •

    $default  reduce usando la regla 13 (declaraciones)


Estado 58

   88 a_cabecera: identificadorTK • parentesisAperturaTK d_par_form parentesisCierreTK puntoYComaTK

    parentesisAperturaTK  desplazar e ir al estado 115


Estado 59

   86 accion_d: accionTK a_cabecera • bloque finAccionTK

    tipoTK   desplazar e ir al estado 6
    varTK    desplazar e ir al estado 16
    constTK  desplazar e ir al estado 7

    $default  reduce usando la regla 14 (declaraciones)

    bloque             ir al estado 116
    declaraciones      ir al estado 19
    declaracion_tipo   ir al estado 20
    declaracion_const  ir al estado 21
    declaracion_var    ir al estado 22


Estado 60

   89 f_cabecera: identificadorTK • parentesisAperturaTK lista_d_var parentesisCierreTK devuelveTK d_tipo puntoYComaTK

    parentesisAperturaTK  desplazar e ir al estado 117


Estado 61

   87 funcion_d: funcionTK f_cabecera • bloque devuelveTK expresion finFuncionTK

    tipoTK   desplazar e ir al estado 6
    varTK    desplazar e ir al estado 16
    constTK  desplazar e ir al estado 7

    $default  reduce usando la regla 14 (declaraciones)

    bloque             ir al estado 118
    declaraciones      ir al estado 19
    declaracion_tipo   ir al estado 20
    declaracion_const  ir al estado 21
    declaracion_var    ir al estado 22


Estado 62

   47 decl_ent: entradaTK • lista_d_var

    identificadorTK  desplazar e ir al estado 34

    $default  reduce usando la regla 41 (lista_d_var)

    lista_d_var  ir al estado 119
    lista_id     ir al estado 36


Estado 63

   48 decl_sal: salidaTK • lista_d_var

    identificadorTK  desplazar e ir al estado 34

    $default  reduce usando la regla 41 (lista_d_var)

    lista_d_var  ir al estado 120
    lista_id     ir al estado 36


Estado 64

    2 cabecera_alg: decl_globales decl_a_f decl_ent_sal • precondicionTK

    precondicionTK  desplazar e ir al estado 121


Estado 65

   44 decl_ent_sal: decl_ent •
   45             | decl_ent • decl_sal

    salidaTK  desplazar e ir al estado 63

    $default  reduce usando la regla 44 (decl_ent_sal)

    decl_sal  ir al estado 122


Estado 66

   46 decl_ent_sal: decl_sal •

    $default  reduce usando la regla 46 (decl_ent_sal)


Estado 67

    7 decl_a_f: accion_d decl_a_f •

    $default  reduce usando la regla 7 (decl_a_f)


Estado 68

    8 decl_a_f: funcion_d decl_a_f •

    $default  reduce usando la regla 8 (decl_a_f)


Estado 69

   28 d_tipo: cadenaTK •

    $default  reduce usando la regla 28 (d_tipo)


Estado 70

   29 d_tipo: caracterTK •

    $default  reduce usando la regla 29 (d_tipo)


Estado 71

   26 d_tipo: booleanoTK •

    $default  reduce usando la regla 26 (d_tipo)


Estado 72

   27 d_tipo: realTK •

    $default  reduce usando la regla 27 (d_tipo)


Estado 73

   25 d_tipo: enteroTK •

    $default  reduce usando la regla 25 (d_tipo)


Estado 74

   20 d_tipo: tuplaTK • lista_campos finTuplaTK

    identificadorTK  desplazar e ir al estado 123

    $default  reduce usando la regla 33 (lista_campos)

    lista_campos  ir al estado 124


Estado 75

   24 d_tipo: refTK • d_tipo

    cadenaTK                 desplazar e ir al estado 69
    caracterTK               desplazar e ir al estado 70
    booleanoTK               desplazar e ir al estado 71
    realTK                   desplazar e ir al estado 72
    enteroTK                 desplazar e ir al estado 73
    tuplaTK                  desplazar e ir al estado 74
    refTK                    desplazar e ir al estado 75
    tablaTK                  desplazar e ir al estado 76
    noTK                     desplazar e ir al estado 77
    operadoresSumaORestaTK   desplazar e ir al estado 78
    parentesisAperturaTK     desplazar e ir al estado 79
    literalBooleanoTK        desplazar e ir al estado 80
    identificadorTK          desplazar e ir al estado 81
    literalCaracterTK        desplazar e ir al estado 82
    literalEnteroTK          desplazar e ir al estado 83
    literalRealTK            desplazar e ir al estado 84
    identificadorBooleanoTK  desplazar e ir al estado 44

    d_tipo       ir al estado 125
    expresion_t  ir al estado 86
    expresion    ir al estado 87
    exp_a        ir al estado 88
    exp_b        ir al estado 89
    operando     ir al estado 90
    operando_b   ir al estado 91
    funcion_ll   ir al estado 92


Estado 76

   21 d_tipo: tablaTK • inicioArrayTK expresion_t subrangoTK expresion_t finalArrayTK deTK d_tipo

    inicioArrayTK  desplazar e ir al estado 126


Estado 77

   60 exp_b: noTK • exp_b

    noTK                     desplazar e ir al estado 77
    operadoresSumaORestaTK   desplazar e ir al estado 78
    parentesisAperturaTK     desplazar e ir al estado 79
    literalBooleanoTK        desplazar e ir al estado 80
    identificadorTK          desplazar e ir al estado 104
    literalEnteroTK          desplazar e ir al estado 83
    literalRealTK            desplazar e ir al estado 84
    identificadorBooleanoTK  desplazar e ir al estado 44

    expresion   ir al estado 127
    exp_a       ir al estado 88
    exp_b       ir al estado 128
    operando    ir al estado 90
    operando_b  ir al estado 91
    funcion_ll  ir al estado 92


Estado 78

   58 exp_a: operadoresSumaORestaTK • exp_a

    operadoresSumaORestaTK  desplazar e ir al estado 78
    parentesisAperturaTK    desplazar e ir al estado 129
    identificadorTK         desplazar e ir al estado 130
    literalEnteroTK         desplazar e ir al estado 83
    literalRealTK           desplazar e ir al estado 84

    exp_a     ir al estado 131
    operando  ir al estado 90


Estado 79

   54 exp_a: parentesisAperturaTK • exp_a parentesisCierreTK
   64 exp_b: parentesisAperturaTK • exp_b parentesisCierreTK

    noTK                     desplazar e ir al estado 77
    operadoresSumaORestaTK   desplazar e ir al estado 78
    parentesisAperturaTK     desplazar e ir al estado 79
    literalBooleanoTK        desplazar e ir al estado 80
    identificadorTK          desplazar e ir al estado 104
    literalEnteroTK          desplazar e ir al estado 83
    literalRealTK            desplazar e ir al estado 84
    identificadorBooleanoTK  desplazar e ir al estado 44

    expresion   ir al estado 127
    exp_a       ir al estado 132
    exp_b       ir al estado 133
    operando    ir al estado 90
    operando_b  ir al estado 91
    funcion_ll  ir al estado 92


Estado 80

   62 exp_b: literalBooleanoTK •

    $default  reduce usando la regla 62 (exp_b)


Estado 81

   22 d_tipo: identificadorTK •
   65 operando: identificadorTK •
   96 funcion_ll: identificadorTK • parentesisAperturaTK l_ll parentesisCierreTK

    parentesisAperturaTK  desplazar e ir al estado 134

    puntoYComaTK  reduce usando la regla 22 (d_tipo)
    $default      reduce usando la regla 65 (operando)


Estado 82

   31 expresion_t: literalCaracterTK •

    $default  reduce usando la regla 31 (expresion_t)


Estado 83

   57 exp_a: literalEnteroTK •

    $default  reduce usando la regla 57 (exp_a)


Estado 84

   56 exp_a: literalRealTK •

    $default  reduce usando la regla 56 (exp_a)


Estado 85

   18 lista_d_tipo: identificadorTK signoIgualTK d_tipo • puntoYComaTK lista_d_tipo

    puntoYComaTK  desplazar e ir al estado 135


Estado 86

   23 d_tipo: expresion_t • subrangoTK expresion_t

    subrangoTK  desplazar e ir al estado 136


Estado 87

   30 expresion_t: expresion •
   63 exp_b: expresion • operadoresComparacionTK expresion
